<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitleReg"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/brown"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/edtTxtEmail"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitleReg"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType ="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/edtTxtPassword"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTxtEmail"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edtTxtPassword"
        android:layout_marginTop="50dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/TxtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@id/btnLogin"
        android:text="@string/no_tienes_cuenta_reg_strate" />

</RelativeLayout>